--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v5
-      - run: echo "💡 The ${{ github.workspace}} repository has been cloned to the runner."
+      - uses: actions/checkout@v5 
       - name: SSH Deploy
         uses: appleboy/ssh-action@master
         with:
@@ -17,8 +16,13 @@ jobs:
           
           script: |
             export PATH="$PATH:/home/${{ secrets.SSH_USERNAME }}/.nvm/versions/node/v22.16.0/bin"
-            rm -r ~/test_deploy
+            mkdir ~/test_new
+            cd test_new
             git clone git@github.com:kasbreen94/test_deploy.git
+            rm -r ~/test_deploy -y
+            mv ~/test_new/test_deploy ~/test_deploy
+            rm -r ~/test_new -y
             cd ~/test_deploy
             yarn install
+            
           
