--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,9 @@ jobs:
             yarn install
             yarn build
             ls -la 
+            shopt -s extglob
             rm -rf !( "dist" | "package.json" | "vite.config.ts" )
+            shopt -u extglob
             cd ~/
             rm -rf test_deploy
             mv ~/test_new/test_deploy ~/test_deploy
